removed popup background + fixed word wrap of menu entries

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -93,7 +93,6 @@ table .selected:before {
 }
 
 .pop-up {
-  background: -webkit-radial-gradient(black 15%, transparent 16%) 0 0, -webkit-radial-gradient(black 15%, transparent 16%) 8px 8px, -webkit-radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 0 1px, -webkit-radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 8px 9px;
   background-color: rgba(10, 10, 10, 0.8);
   background-size: 16px 16px;
   position: absolute;
@@ -119,6 +118,7 @@ table .selected:before {
   height: 32px;
   vertical-align: top;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .menu .nested {
@@ -133,12 +133,12 @@ table .selected:before {
 .menu li ul {
   list-style-type: none;
   padding: 0;
-  margin 0;
+  margin: 0;
 }
 
 .menu > li:not(.nested):hover {
   background: #151515;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .menu li:not(.nested):before {
